layout and style tweaks

--- a/public/media-queries.css
+++ b/public/media-queries.css
@@ -11,7 +11,7 @@
         "current-section"
         "forecast-section";
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: 2fr 1.2fr 3fr;
     }
 
 }
